# lecture28

./: README.md  names.csv  stack.yaml  weets.csv
witter-client/: witter-client.cabal
witter-client/exe/: Client.hs  Main.hs
witter-server/: witter-server.cabal
witter-server/exe/: Main.hs
witter-shared/: witter-shared.cabal
witter-shared/src/: Witter.hs
witter-shared/src/Witter/: API.hs  Follower.hs  FollowerStore.hs  User.hs  UserStore.hs  Util.hs  Weet.hs  WeetStore.hs
wwwroot/: index.html
