cabal-version: 1.12

name:           witter-client
version:        1.0.0.0
description:    Please see the README on GitHub at <https://github.com/fpclass/lecture28#readme>
homepage:       https://github.com/fpclass/lecture28#readme
bug-reports:    https://github.com/fpclass/lecture28/issues
author:         Michael B. Gale
maintainer:     m.gale@warwick.ac.uk
copyright:      Copyright 2019 Michael B. Gale
license:        MIT
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/fpclass/lecture28

executable witter-client
  hs-source-dirs:
      exe
  main-is: Main.hs
  other-modules:
      Client
  build-depends:
      base >=4.7 && <5,
      text,
      containers,
      servant,
      servant-client,
      servant-docs,
      servant-js,
      http-client,
      witter-shared
  default-language: Haskell2010
  default-extensions:
      OverloadedStrings
