cabal-version: 1.12

name:           witter-shared
version:        1.0.0.0
description:    Please see the README on GitHub at <https://github.com/fpclass/lecture28#readme>
homepage:       https://github.com/fpclass/lecture28#readme
bug-reports:    https://github.com/fpclass/lecture28/issues
author:         Michael B. Gale
maintainer:     m.gale@warwick.ac.uk
copyright:      Copyright 2019 Michael B. Gale
license:        MIT
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/fpclass/lecture28

library
  exposed-modules:
      Witter,
      Witter.API,
      Witter.Follower,
      Witter.FollowerStore,
      Witter.User,
      Witter.UserStore,
      Witter.Util,
      Witter.Weet,
      Witter.WeetStore
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5,
      bytestring,
      text,
      vector,
      containers,
      unordered-containers,
      time,
      servant,
      servant-server,
      servant-docs,
      aeson,
      cassava
  default-language: Haskell2010
  default-extensions:
      OverloadedStrings,
      RecordWildCards
